html updated with website contents

--- a/index.html
+++ b/index.html
@@ -25,40 +25,140 @@
 </head>
 
 <body id="page-top">
+  
+  <div class="mountain-bg"> 
+    <!-- Navigation -->
+    <nav class="" id="mainNav">
+      <div class="container">
+        <a class="nav-title" href="">Travel California</a>
+        <ul>
+          <li>DOWNLOAD</li>
+          <li>FEATURES</li>
+          <li>CONTACT</li>
+        </ul>
+      </div>
+    </nav>
 
-  <!-- Navigation -->
-  <nav class="" id="mainNav">
-    <div class="">
-      <a class="" href="">Travel California</a>
-
-    </div>
-  </nav>
-
-  <!-- Hero Section -->
-  <header class="masthead">
-  </header>
+    <!-- Hero Section -->
+    <header class="masthead">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7">
+            <h1>Download the Travel California app and explore California today!</h1>
+          </div>
+          <div class="col-lg-5">
+            <div class="device-container">
+              <img src="img/demo-screen-1.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+  </div>
 
   <!-- Download Section -->
   <section class="download" id="download">
-
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <h2 class="section-heading">Discover what all the buzz is about!</h2>
+          <p>Our app is available on any mobile device! Download now to get started!</p>
+        </div>
+        <div class="badges">
+          <a href="http://" class="badges-link">
+            <img src="img/google-play-badge.svg" alt="">
+            <img src="img/app-store-badge.svg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Testimonials -->
   <section class="testimonials" id="features">
+    <div class="container">
+      <h2>What people are saying...</h2>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="testimonial-item">
+            <img src="" alt="">
+            <h5></h5>
+            <p></p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="testimonial-item">
+            <img src="" alt="">
+            <h5></h5>
+            <p></p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="testimonial-item">
+            <img src="" alt="">
+            <h5></h5>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Call to Action -->
   <section class="signup-section" id="signup">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+          <i></i>
+          <h2>Subscribe to receive updates!</h2>
+          <form>
+            <input type="text">
+            <button>Subscribe</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Contact-->
   <section class="contact-section bg-black" id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <i></i>
+              <h4 class="text-uppercase"></h4>
+              <div></div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <i></i>
+              <h4 class="text-uppercase"></h4>
+              <div></div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <i></i>
+              <h4 class="text-uppercase"></h4>
+              <div></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <footer>
     <div class="container">
+      <div class="footer">
+        <div><p>"Copyright" Minhui Liu 2023</p></div>
+      </div>
     </div>
   </footer>
+
   <!-- Optional JavaScript -->
   <!-- Popper.js, then Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
