--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
 
    <!-- Custom styles for this template -->
    <link href="css/index.css" rel="stylesheet">
@@ -28,13 +29,13 @@
   
   <div class="mountain-bg"> 
     <!-- Navigation -->
-    <nav class="" id="mainNav">
-      <div class="container">
-        <a class="nav-title" href="">Travel California</a>
-        <ul>
-          <li>DOWNLOAD</li>
-          <li>FEATURES</li>
-          <li>CONTACT</li>
+    <nav class="navbar navbar-expand-lg" id="mainNav">
+      <div class="container nav-whole">
+        <a class="navbar-brand" href="">Travel California</a>
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item">DOWNLOAD</li>
+          <li class="nav-item">FEATURES</li>
+          <li class="nav-item">CONTACT</li>
         </ul>
       </div>
     </nav>
@@ -43,12 +44,13 @@
     <header class="masthead">
       <div class="container">
         <div class="row">
-          <div class="col-lg-7">
-            <h1>Download the Travel California app and explore California today!</h1>
+          <div class="container-fluid col-lg-7 hero-text">
+            <h1 class="display-5">Download the <strong>Travel California</strong> app and explore California today!</h1>
+            <button class="btn btn-primary btn-lg" type="button">Example button</button>
           </div>
           <div class="col-lg-5">
             <div class="device-container">
-              <img src="img/demo-screen-1.png" alt="">
+              <img src="./images/demo-screen-1 1.png" alt="iphone with travel california app.">
             </div>
           </div>
         </div>
@@ -66,8 +68,8 @@
         </div>
         <div class="badges">
           <a href="http://" class="badges-link">
-            <img src="img/google-play-badge.svg" alt="">
-            <img src="img/app-store-badge.svg" alt="">
+            <img src="./images/google-play-badge.png" alt="google play badge">
+            <img src="./images/app-store-badge.png" alt="app store badge">
           </a>
         </div>
       </div>
@@ -81,23 +83,24 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item">
-            <img src="" alt="">
-            <h5></h5>
-            <p></p>
+            <img src="./images/testimonials-1.jpg" alt="">
+            <h5>Margaret E.</h5>
+            <p>“This is fantastic! Thanks so much
+              guys!”</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item">
-            <img src="" alt="">
-            <h5></h5>
-            <p></p>
+            <img src="./images/testimonials-2.jpg" alt="">
+            <h5>Sarah S.</h5>
+            <p>“Travel California is amazing. I’ve been using it to explore lots of super nice national parks.”</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item">
-            <img src="" alt="">
-            <h5></h5>
-            <p></p>
+            <img src="./images/testimonials-3.jpg" alt="">
+            <h5>Fred W.</h5>
+            <p>“Thanks so much for making these free resources available to us!”</p>
           </div>
         </div>
       </div>
